horiz spacing fixed

--- a/module2-solution/css/module2.css
+++ b/module2-solution/css/module2.css
@@ -7,28 +7,37 @@ h1 {
   margin-bottom: 15px;
 }
 
-p {
+.itemtitle {
+  position: absolute;
+  top: -1px;
+  right: -1px;
+  width: 80px;
+  height: 24px;
+  margin: 0;
+  padding-top: 4px;
+  padding-right: 2px;
+  padding-bottom: 2px;
+  padding-left: 2px;
+  text-align: center;
   border: 1px solid black;
-  background-color: #B5CAAA;
-  width: 90%;
-  height: 150px;
-  padding: 10px;
-  font-family: Helvetica;
-  color: black;
-  margin-left: auto;
-  margin-right: auto;
-  overflow: auto;
+  background-color: #ffe6b3;
 }
 
-.item1 p {
+p {
+  font-family: Helvetica;
+  color: black;
+  margin: 16px;
+}
+
+.item1 {
   background-color: #C5EAEA;
 }
 
-.item2 p {
+.item2 {
   background-color: #EAEAC5;
 }
 
-.item2 p {
+.item3 {
   background-color: #EAC5EA;
 }
 
@@ -38,43 +47,41 @@ p {
 }
 
 .item1, .item2, .item3 {
+  position: relative;
   float: left;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-top: 8px;
+  margin-bottom: auto;  
+  border: 1px solid black;
+  height: 150px;
+  padding: 32px 10px 24px 10px;
+  font-family: Helvetica;
+  color: black;
+  overflow: auto;
 }
 
 /********** Large devices only **********/
 @media (min-width: 992px) {
-  .item1, .item2 {
-    width: 33.3%;
+  .item1, .item2, .item3 {
+    width: 31.3%;
   }
-
-  .item3 {
-    width: 33.3%;
-  }
-
 }
 
 /********** Medium devices only **********/
 @media (min-width: 768px) and (max-width: 991px) {
 .item1, .item2 {
-    width: 50%;
+    width: 48%;
   }
 
   .item3 {
-    width: 100%;
+    width: 98%;
   }
-
 }
 
 /********** Small devices only **********/
 @media (max-width: 767px) {
-  .item1, .item2 {
-    width: 100%;
+  .item1, .item2, .item3 {
+    width: 98%;
   }
-  .item3 {
-    width: 100%;
-  }
-
-
 }
